...
              source={DocumentSecondary}
              contentFit="cover"
            />
          </Animated.View>
          <Animated.View entering={FadeInDown.delay(150).duration(500)}>
            <Text className="text-ink text-center text-2xl w-80 pt-6 font-bold leading-9">
              Sign in or sign up to start your request
            </Text>
            <Text className="text-ink-muted text-center text-base w-80 pt-2 leading-6">
              Request, track and share your medical records in one place.
            </Text>
          </Animated.View>
          <Animated.View
...
                onPress={() => router.push("/sign_up")}
              />
            </View>
            <View style={{ flexDirection: "row" }}>
              <Button
                buttonStyle="secondary"
                text="Sign In"
                onPress={() => router.push("/sign_in")}
              />
            </View>
          </Animated.View>
        </View>
        <Stack.Screen
...
