...
                onPress={() => previous()}
              />
              <View className="w-4" />
            </>
          )}
          <Button
            text={step < 3 ? "Next" : "Get started"}
            onPress={() =>
              next({
                onFinalStep: onFinish,
              })
            }
          />
...
