...
          </Animated.View>
          <Animated.View entering={FadeInDown.delay(100).duration(450)}>
            <SocialLogins />
          </Animated.View>
          <Animated.View entering={FadeInDown.delay(200).duration(450)}>
            <Text className="pt-6 pb-6 text-lg text-center font-medium text-gray-700">
              Or use your email and password
            </Text>
            <SignInForm />
          </Animated.View>
          <Animated.View entering={FadeInDown.delay(300).duration(450)}>
            <SignUpInvitation />
          </Animated.View>
...
